--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -4,9 +4,26 @@ $font-stack: "Quicksand", sans-serif;
 $white: white;
 
 $light-color: #f2f3fa;
-$text-white-theme: #353645;
+$text-light-theme: #353645;
 
 $dark-color: #232b4b;
 $text-dark-theme: #b5cff4;
 
-$primary-color: #2c88dd;
+$primary-color: #54b7c0;
+
+$red-color: #e43e59;
+
+$text-sm: 14px;
+
+$text-md: 16px;
+
+$text-lg: 20px;
+
+$text-xl: 24px;
+
+$text-2xl: 35px;
+
+$font-light: 300;
+$font-md: 400;
+
+$font-bold: 600;
