--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,4 +1,6 @@
 @import "./breakpoint";
 @import "./variable";
 @import "./reset";
+@import "./helper";
+// @import "./share";
 @import "./account";
