--- a/src/assets/styles/_variable.scss
+++ b/src/assets/styles/_variable.scss
@@ -27,3 +27,5 @@ $font-light: 300;
 $font-md: 400;
 
 $font-bold: 600;
+
+$shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
