--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -4,7 +4,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $light-color;
+    // background-color: $light-color;
+    background-color: red;
     transition: all 0.2s linear;
     .app {
       background-color: $white;
