--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -6,6 +6,7 @@
     align-items: center;
     // background-color: $light-color;
     background-color: red;
+    color: blue;
     transition: all 0.2s linear;
     .app {
       background-color: $white;
