Make display none

--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -8,6 +8,7 @@
     background-color: red;
     color: blue;
     transition: all 0.2s linear;
+    display: none;
     .app {
       background-color: $white;
 
