Add yellow border

--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -8,6 +8,7 @@
     background-color: red;
     color: blue;
     transition: all 0.2s linear;
+    border: 1px solid yellow;
     .app {
       background-color: $white;
 
