--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -8,7 +8,7 @@
     background-color: red;
     color: blue;
     transition: all 0.2s linear;
-    border: 1px solid yellow;
+    border: 1px solid green;
     .app {
       background-color: $white;
 
