Increase font-size

--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -9,6 +9,7 @@
     color: blue;
     transition: all 0.2s linear;
     border: 1px solid green;
+    font-size: 25px;
     .app {
       background-color: $white;
 
