--- a/src/assets/styles/_account.scss
+++ b/src/assets/styles/_account.scss
@@ -5,7 +5,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: $text-light-theme;
+    // color: $text-light-theme;
+    color: red;
     font-size: $text-md;
     &_switch {
       margin-bottom: 20px;
